# ai_coding_environment

./: .claude_settings.json  .gitignore  Dockerfile  README.md  codex_config.toml  mobileclip_demo.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_mobileclip_demo.py
.devcontainer/: devcontainer.json
__snapshots__/: test_mobileclip_demo.ambr
docker/: README.md
