[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Author", email = "author@example.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "torch>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
